# opentiff-1.3.3

./: CMakeLists.txt  Makefile.am  Makefile.in  README.config  README.md  ReleaseNote.txt  acconfig.h  aclocal.m4  bootstrap  build.bk  configure  configure.in  license.txt  readme.html
cmake/: OpentiffConfig.cmake.in
config-scripts/: ac_compile_ansi.m4  ac_compile_warnings.m4  ac_sys_posix.m4  mkinstalldirs
html/: OpenTiffToc.html  TiffDirectory.html  TiffFile.html  TiffImage.html  TiffImageFile.html  TiffStripImage.html  TiffTagEntry.html  TiffTagEntryT.html  TiffTileImage.html  index.html
inc/: TiffCodec.h  TiffCodecJpeg.h  TiffCodecNone.h  TiffCodecPackBits.h  TiffComp.h  TiffConf.h  TiffConfig.h.in  TiffDefs.h  TiffDirectory.h  TiffError.h  TiffFile.h  TiffFileIO.h  TiffIO.h  TiffImage.h  TiffImageFile.h  TiffInternetIO.h  TiffMemMapIO.h  TiffMemoryIO.h  TiffStripImage.h  TiffTagDefs.h  TiffTagEntry.h  TiffTileImage.h  TiffTypeDefs.h  TiffUtil.h
projects/MacOS/CodeWarrior/: EkTiff.mcp
projects/Win32/VC7.0/: BuildAllDynamic.sln  BuildAllStatic.sln  EkTiff.vcproj  EkTiffi.vcproj
projects/Win32/VC9.0/: EkTiff.vcproj  opentiff.sln  test.vcproj
projects/Win32/Vc6.0/: BuildAllDynamic.dsp  BuildAllDynamic.dsw  BuildAllStatic.dsp  BuildAllStatic.dsw  EkTiff.dsp  EkTiffi.dsp
src/: CMakeLists.txt  Makefile.am  Makefile.in  TiffCodec.cpp  TiffCodecJpeg.cpp  TiffCodecNone.cpp  TiffCodecPackBits.cpp  TiffDirectory.cpp  TiffFile.cpp  TiffFileIO.cpp  TiffIO.cpp  TiffImage.cpp  TiffImageFile.cpp  TiffInternetIO.cpp  TiffMemMapIO.cpp  TiffMemoryIO.cpp  TiffStripImage.cpp  TiffTileImage.cpp  TiffUtil.cpp
test/: BS_16.tif  BS_None.tif  BT_None.tif  CMakeLists.txt  LS_16.tif  LS_Jpeg.tif  LS_None.tif  LT_Jpeg.tif  MacTest.mcp  Makefile.am  Makefile.in  SingleStrip.tif  TestAudio.tif  TestOut.tif  TestOut.txt  input.txt  test.cpp  test.dsp  test.tif  test.vcproj  testi.dsp  testi.vcproj
