dnl Process this file with autoconf to produce a configure script.
AC_INIT(inc/TiffImageFile.h)
AC_CONFIG_AUX_DIR(./config-scripts)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(opentiff, 1.3.3)
AM_CONFIG_HEADER(inc/TiffConfig.h)

dnl ==========================================================================
dnl Check if they want to compile in debug mode
dnl ==========================================================================

AC_ARG_WITH(enable_debug, [  -enable-debug= [ yes | no ] Compile in debug mode [default=no]])
AC_MSG_CHECKING(to compile in debug mode )
build_debug='no'
CXXFLAGS="-O2"
CFLAGS="-O2"
if [ test "x$enable_debug" = "xyes" ] ; then
  build_debug='yes'
  AC_DEFINE(_DEBUG)
  CXXFLAGS="-g"
  CFLAGS="-g"
fi
AC_MSG_RESULT([$build_debug])
AM_CONDITIONAL(TIFF_DEBUG, test x$enable_debug = xyes)

dnl define this for when we're building opentiff -- not a when we're 
dnl building something else
CXXFLAGS+=" -DOPENTIFF_BUILDING "
CFLAGS=" -DOPENTIFF_BUILDING "

dnl Determine if we're a maintainer or not
dnl (adds a --enable-maintainer-mode option)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL
AC_PROG_MAKE_SET

dnl Check compiler capabilities
AM_PROG_CC_C_O

dnl Check for debugging


dnl Checks for libraries.
AC_FUNC_MMAP
AM_CONDITIONAL(ENABLE_MMAP, test x$ac_cv_func_mmap_fixed_mapped = xyes)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T

dnl Check for endianness - defines WORD_BIGENDIAN
AC_C_BIGENDIAN


AC_MSG_CHECKING([the bit order of the target CPU ($target)])  
ac_fillorder=LSB2MSB
case "$target" in
    mips-dec-*) AC_DEFINE(HAVE_FILLORDER_LSB2MSB) ;;
    i[345]86-*) AC_DEFINE(HAVE_FILLORDER_LSB2MSB) ;;
    *)		ac_fillorder=MSB2LSB ;;
esac
AC_MSG_RESULT($ac_fillorder)

dnl Checks for library functions.


dnl Check for special needs


AC_OUTPUT(Makefile src/Makefile test/Makefile)

